syntax = "proto3";

package autokitteh.remote.v1;

import "autokitteh/remote/v1/types.proto";

message ExportsRequest {
  string file_name = 1;
}

message ExportsResponse {
  repeated string exports = 1;
  string error = 2;
}

message StartRequest {
  string entry_point = 1; // "main.py:on_event"
  Event event = 2;
}

message ExecuteRequest {
  bytes data = 1;
}

message ExecuteResponse {
  bytes result = 1;
  string error = 2;
  repeated Frame traceback = 3;
}

message StartResponse {
  string error = 1;
  repeated Frame traceback = 2;
}

message ActivityReplyRequest {
  bytes data = 1;
  bytes result = 2;
  string error = 3;
}

message ActivityReplyResponse {
  string error = 1;
}

message UserCodeRunnerHealthRequest {}

message UserCodeRunnerHealthResponse {
  string error = 1;
}

service UserCodeRunnerService {
  // Get exports
  rpc Exports(ExportsRequest) returns (ExportsResponse) {}
  // Called at start of session
  rpc Start(StartRequest) returns (StartResponse) {} // initial session event
  // Execute a function in the runtime (skipped if it's a reply)
  rpc Execute(ExecuteRequest) returns (ExecuteResponse) {}
  // Reply from activity
  rpc ActivityReply(ActivityReplyRequest) returns (ActivityReplyResponse) {}

  rpc Health(UserCodeRunnerHealthRequest) returns (UserCodeRunnerHealthResponse) {}
}
